# OnlineDesk_project2026

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.server  README.md  docker-compose.yml  libodb_2.5.0-0~ubuntu22.04_amd64.deb  script-build.sh  script-client-start.sh  script-server-start.sh
client/: CMakeLists.txt
client/src/: AppController.cpp  AppController.hpp  AppControllerFwd.hpp  AuthDialog.cpp  AuthDialog.hpp  BoardScreen.cpp  BoardScreen.hpp  BoardWidgets.cpp  BoardWidgets.hpp  BoardWorker.cpp  BoardWorker.hpp  BoardWorkerInterface.hpp  BoardsButtonList.cpp  BoardsButtonList.hpp  BoardsListWidget.cpp  BoardsListWidget.hpp  GrpcBoardClient.cpp  GrpcBoardClient.h  GrpcBoardClient.hpp  GrpcEcho.cpp  GrpcEcho.h  MainScreen.cpp  MainScreen.hpp  RegisterDialog.cpp  RegisterDialog.hpp  SessionReactor.cpp  SessionReactor.hpp  SessionReactorInterface.hpp  main.cpp
client/src/AppController/: AppController.cpp  AppController.hpp
client/src/Authentication/: AuthDialog.cpp  AuthDialog.hpp
client/src/BoardScreen/: BoardScreen.cpp  BoardScreen.hpp  BoardScreenFwd.hpp  BoardWidgets.cpp  BoardWidgets.hpp  BoardWorker.cpp  BoardWorker.hpp  BoardWorkerFwd.hpp  BoardWorkerInterface.hpp
client/src/GrpcClient/: GrpcBoardClient.cpp  GrpcBoardClient.hpp  GrpcBoardClientFwd.hpp  SessionReactor.cpp  SessionReactor.hpp  SessionReactorInterface.hpp
client/src/Main/: main.cpp
client/src/MainMenuScreen/: BoardsButtonList.cpp  BoardsButtonList.hpp  MainScreen.cpp  MainScreen.hpp
client/src/Registration/: RegisterDialog.cpp  RegisterDialog.hpp
docker-odb-packages/: libodb-dev_2.5.0-0~ubuntu22.04_amd64.deb  libodb-pgsql-dev_2.5.0-0~ubuntu22.04_amd64.deb  libodb-pgsql_2.5.0-0~ubuntu22.04_amd64.deb  odb_2.5.0-0~ubuntu22.04_amd64.deb
init-db/: 01-init-tables.sql
proto/: auth.proto  board.proto  contracts.proto
server/: CMakeLists.txt
server/src/: AuthenticationImpl.cpp  AuthenticationImpl.h  AuthenticationImpl.hpp  BoardImpl.cpp  BoardImpl.hpp  BoardServiceImpl.cpp  BoardServiceImpl.hpp  BoardWidgets.cpp  BoardWidgets.hpp  BoardWidgets_dev.cpp  BoardWidgets_dev.hpp  EchoImpl.cpp  EchoImpl.h  SessionImpl.cpp  SessionImpl.hpp  main.cpp
server/src/AuthenticationImpl/: AuthenticationImpl.cpp  AuthenticationImpl.hpp
server/src/BoardImpl/: BoardImpl.cpp  BoardImpl.hpp  BoardServiceImplFwd.hpp
server/src/BoardWidgets/: BoardWidgets.cpp  BoardWidgets.hpp
server/src/Database/: BaseRepository.hpp  BoardRepository.cpp  BoardRepository.hpp  ConnectionManager.cpp  ConnectionManager.hpp  Models.hxx  ODBTracer.hpp  UserRepository.cpp  UserRepository.hpp  UserTable.hxx  WidgetRepository.cpp  WidgetRepository.hpp
server/src/Main/: main.cpp
server/src/SessionImpl/: SessionImpl.cpp  SessionImpl.hpp  SessionInstance.cpp  SessionInstance.hpp  SessionManager.cpp  SessionManager.hpp  SessionReactor.cpp  SessionReactor.hpp
server/src/WidgetsDataBase/: WidgetsDB.cpp  WidgetsDB.hpp
tests/: CMakeLists.txt  auth_tests.cpp  board_service_tests.cpp  widgets_db_tests.cpp
